new saved changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Ngash01.github.io",
+  "homepage": "http://Ngash01.github.io/ecommerce-website",
   "name": "my-ecommerce-store",
   "version": "0.1.0",
   "private": true,
